# deepgram-fish-speech-workflow

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml  low_latency.yaml  offline.yaml
examples/: audio_test.py  basic_loop.py  coaching_assistant.py  conversational_ai.py
src/: __init__.py
src/audio/: __init__.py  input.py  output.py  vad.py
src/core/: __init__.py  config.py  protocols.py  types.py
src/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  local_provider.py  openai_provider.py
src/pipeline/: __init__.py  voice_loop.py
src/stt/: __init__.py  base.py  deepgram_provider.py  factory.py  whisper_local.py
src/tts/: __init__.py  base.py  edge_tts_provider.py  factory.py  fish_audio_api.py  fish_speech.py  pyttsx3_provider.py
tests/: __init__.py  conftest.py
